--- a/src/backend/web/templates/event_list.html
+++ b/src/backend/web/templates/event_list.html
@@ -31,7 +31,7 @@
           </ul>
         </div>
 
-        <h1 class="visible-xs end_header">{% if explicit_year %}{{selected_year}} {% endif %}<em>FIRST</em> Robotics Competition Events{% if state_prov %} in {{state_prov}}{% endif %}{% if events|length > == 1 %} <small>{{ events|length }} Event</small>{% endif %}{% if events|length > 1 %} <small>{{ events|length }} Events</small>{% endif %}</h1>
+        <h1 class="visible-xs end_header">{% if explicit_year %}{{selected_year}} {% endif %}<em>FIRST</em> Robotics Competition Events{% if state_prov %} in {{state_prov}}{% endif %}{% if events|length == 1 %} <small>{{ events|length }} Event</small>{% endif %}{% if events|length > 1 %} <small>{{ events|length }} Events</small>{% endif %}</h1>
 
         {% if districts %}
         <div class="btn-group">
