--- a/src/backend/web/templates/match_partials/match_predictions_table_header.html
+++ b/src/backend/web/templates/match_partials/match_predictions_table_header.html
@@ -11,6 +11,8 @@
       AQ / FtB:<br>Actual<br><em>(Predicted Probability)</em>
     {% elif year == 2020 %}
       Energized / Operational:<br>Actual<br><em>(Predicted Probability)</em>
+    {% elif year == 2022 %}
+      Cargo Bonus / Hangar Bonus:<br>Actual<br><em>(Predicted Probability)</em>
     {% endif %}
   </th>
   <th rowspan="2">Actual Score vs. Predicted Distribution</th>
