Fix instances of lowercase "the" in The Blue Alliance

--- a/src/backend/web/templates/add_data.html
+++ b/src/backend/web/templates/add_data.html
@@ -35,10 +35,10 @@
 
       <h2 id="team-media">Team Media</h2>
       <p>You can suggest various types of team media to TBA from a team's detail page in a specific year. You can suggest robot pictures, reveal videos, and robot CAD. Team social media accounts, like Twitter, Facebook, Instagram, and GitHub are not year-specific, and persist from year to year.</p>
-    
+
       <h2 id="offseason">Adding a New Offseason Event</h2>
       <p>Do you know of an offseason event missing from TBA? You can suggest an event to be added <a href="/suggest/offseason">here</a>. The request will be reviewed and added shortly.</p>
-     
+
       <h2 id="results">Adding Offseason Event Results</h2>
       <div class="row">
         <div class="col-xs-6 col-sm-5 col-lg-6">
@@ -53,7 +53,7 @@
         </div>
       </div>
     <h3>FMS Reports</h3>
-    <p>We can also import FMS Report exports into the Blue Alliance. You can either <a href="/request/apiwrite">obtain write keys</a> and use the <a href="/eventwizard">Event Wizard</a> to input the reports, or post them in our <a href="http://facebook.com/groups/moardata">Facebook Group</a>.</p>
+    <p>We can also import FMS Report exports into The Blue Alliance. You can either <a href="/request/apiwrite">obtain write keys</a> and use the <a href="/eventwizard">Event Wizard</a> to input the reports, or post them in our <a href="http://facebook.com/groups/moardata">Facebook Group</a>.</p>
 
     <h2 id="other">Other</h2>
     <p>For other data you'd like to add, reach out on our <a href="http://facebook.com/groups/moardata">Facebook Group</a> or <a href="/contact">drop us a line</a>, we'll be happy to help!</p>
